Fix Tailwind v4 theme engine bug: Wrap CSS variables in hsl() and map to @theme. Fix prototype syntax error.

--- a/prototype/style.css
+++ b/prototype/style.css
@@ -354,7 +354,9 @@ button {
     color: #ff0000;
 }
 
+
 /* Make floating cards float up and down, and stay AHEAD of the phone */
+.phone-notch {
     position: absolute;
     top: 0;
     left: 50%;
